# tracking-as-a-service

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml  request_servers.sh  requirements.txt
model_repos/: README.md
model_repos/ExatrkX4PixelPython/: config.pbtxt
model_repos/ExatrkX4PixelPython/1/: client.py  model.py
model_repos/Exatrkx4PixelPython/: config.pbtxt
model_repos/Exatrkx4PixelPython/1/: model.py
models/: README.md
models/BTagging_GN3V00_antikt4empflow/: config.pbtxt
models/BTagging_GN3V00_antikt4empflow/1/: model.onnx
models/DoubleMetricLearning/: README.md  config.pbtxt
models/DoubleMetricLearning/1/: README.md  double_metric_learning.py  fastwalkthrough.py  gnn.ckpt  inference.py  model.py  save_full_model.py  torch_model_inference.py
models/DoubleMetricLearning/2/: README.md  dp_walkthrough.py  filter.ckpt  gnn.ckpt  inference.py  interaction_gnn.py  model.py  torch_model_inference.py  utils.py
models/DoubleMetricLearning/3/: README.md  client.py  double_metric_learning.py  fastwalkthrough.py  filter.ckpt  gnn.ckpt  inference.py  interaction_gnn.py  model.py  (+2 more)
models/DoubleMetricLearningDPW/: README.md  config.pbtxt
models/ExatrkX4PixelPython/: config.pbtxt
models/ExatrkX4PixelPythonWithFilter/: config.pbtxt
models/GNN4Pixel/: config.pbtxt
models/MetricLearning/: README.md  config.pbtxt  config_multi_gpu_example.pbtxt
models/ModuleMap/: config.pbtxt
notebooks/: 1. GNN4ITk Performance.ipynb
scripts/: download_model.py  request_servers.sh  start-tritonserver.sh
(+79 files in other folders)
